--- a/assets/translations/languages.json
+++ b/assets/translations/languages.json
@@ -76,6 +76,10 @@
 		"label": "नेपाली"
 	},
 	{
+		"locale": "nl",
+		"label": "Nederlands"
+	},
+	{
 		"locale": "no",
 		"label": "Norwegian"
 	},
